# frisk

./: .gitignore  CMakeLists.txt  README.md  build.sh  compiler  rebuild.sh
exp/layout/: CMakeLists.txt  README.md  analyze_bank_conflicts.py  gemm_layout_tool.cpp
exp/layout/result/: log  log_12_23
ffi/: ffi.cpp  ffi.h  ir.cpp
include/Dialect/: CMakeLists.txt
include/Dialect/Frisk/IR/: CMakeLists.txt  FriskAttributes.h  FriskAttributes.td  FriskDialect.h  FriskDialect.td  FriskEnums.h  FriskEnums.td  FriskInterfaces.td  FriskOps.h  FriskOps.td  FriskTypes.h  FriskTypes.td
include/Dialect/Frisk/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/Frisk/Utils/: LayoutUtils.h  Utils.h
lib/Dialect/Frisk/IR/: CMakeLists.txt  FriskAttributes.cpp  FriskEnums.cpp  FriskOps.cpp  FriskOps_Reduce.cpp
lib/Dialect/Frisk/Transforms/: CMakeLists.txt  LayoutInfer.cpp  README.md
lib/Dialect/Frisk/Utils/: LayoutUtils.cpp  README.md
python/frisk/: __init__.py
python/frisk/common/: utils.py
test/: bind_test.py
test/python/: bind_test.py  helper_test.py  map_expr_test.py  test.py
test_pass/: CMakeLists.txt  attr_test.cpp
tmp/: ir.mlir  log_11_18  log_11_25  log_11_27  log_12_18
